fixed section spacing

--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@
 
 .hash-span {
   margin-top: -100px;
-  padding-bottom: 100px;
+  padding-bottom: 60px;
   display: block;
 }
 
